--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/body-parser": "^1.19.6",
     "@types/bun": "latest",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/lodash": "^4.17.20"
   },
   "peerDependencies": {
@@ -16,6 +17,7 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.18.0",
     "zod": "^4.1.5"
