--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,9 @@
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
     "paths": {
-      "@/*": ["./src/*"]
-    }
-  }
+      "@/*": ["./src/*"],
+      "@modules/*": ["./src/modules/*"],
+    },
+  },
+  "include": ["src/**/*", "src/types/express.d.ts"]
 }
