--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@types/bun": "latest",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/lodash": "^4.17.20"
+    "@types/lodash": "^4.17.20",
+    "@types/supertest": "^6.0.3",
+    "supertest": "^7.1.4"
   },
   "peerDependencies": {
     "typescript": "^5"
