--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
       "@category/*": ["./src/modules/ticket/ticket-setup/category/*"],
       "@user-ticket/*": ["./src/modules/ticket/ticket-instance/user-ticket/*"],
       "@user-ticket-category/*": ["./src/modules/ticket/ticket-instance/user-ticket-category/*"],
+      "@payment/*": ["./src/modules/payment/*"],
     },
   },
   "include": ["src/**/*", "src/types/express.d.ts"]
