--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,10 +19,60 @@ services:
     image: mongo:8.0.5
     ports:
       - 27017:27017
-    container_name: ticketapp
+    container_name: mongodb
 
-  # MESSAGE BROKER
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+    networks:
+      - monitoring_network
+
+  # loki:
+  #   image: grafana/loki:2.9.0
+  #   ports:
+  #     - "3100:3100"
+  #   command: -config.file=/etc/loki/config/loki-config.yaml
+  #   volumes:
+  #     - ./loki/loki-config.yaml:/etc/loki/config/loki-config.yaml
+
+  # promtail:
+  #   image: grafana/promtail:2.9.0
+  #   volumes:
+  #     - /var/lib/docker/containers:/var/lib/docker/containers:ro
+  #     - ./promtail/promtail-config.yaml:/etc/promtail/config.yml
+  #   command: -config.file=/etc/promtail/config.yml
+
+  # tempo:
+  #   image: grafana/tempo:latest
+  #   ports:
+  #     - "4318:4318" # OTLP HTTP port
+  #   command: ["-config.file=/etc/tempo/config.yml"]
+  #   volumes:
+  #     - ./tempo-config.yml:/etc/tempo/config.yml
+
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - '3001:3000'
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    networks:
+      - monitoring_network
+    depends_on:
+      - prometheus
+      # - loki
+      # - tempo
   
 networks:
   default:
+    driver: bridge
+  monitoring_network:
     driver: bridge
