--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.65.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.207.0",
+    "@opentelemetry/sdk-node": "^0.207.0",
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.18.0",
+    "pino": "^10.1.0",
+    "prom-client": "^15.1.3",
     "zod": "^4.1.5"
   },
   "scripts": {
