--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.18.0",
+    "pino-http": "^11.0.0",
     "zod": "^4.1.5"
   },
   "scripts": {
