--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/lodash": "^4.17.20",
+    "@types/multer": "^2.0.0",
     "@types/supertest": "^6.0.3",
     "supertest": "^7.1.4"
   },
@@ -22,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.18.0",
+    "multer": "^2.0.2",
     "pino-http": "^11.0.0",
     "zod": "^4.1.5"
   },
