--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,28 @@
 version: "3.3"
 services:
   # BACKEND
-  api:
-    build: .
-    container_name: ticketapp_api
-    ports:
-      - "5000:5000"
-    volumes:
-      - ./uploads:/app/uploads
-    depends_on:
-      - mongodb
-    restart: unless-stopped
+  # api:
+  #   build: .
+  #   container_name: ticketapp_api
+  #   ports:
+  #     - "5000:5000"
+  #   volumes:
+  #     - ./uploads:/app/uploads
+  #   depends_on:
+  #     - mongodb
+  #   restart: unless-stopped
 
-  nginx:
-    image: nginx:1.25.2-alpine
-    container_name: ticketapp_nginx
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./uploads:/var/www/media
-    depends_on:
-      - api
-    restart: unless-stopped
+  # nginx:
+  #   image: nginx:1.25.2-alpine
+  #   container_name: ticketapp_nginx
+  #   ports:
+  #     - "80:80"
+  #   volumes:
+  #     - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+  #     - ./uploads:/var/www/media
+  #   depends_on:
+  #     - api
+  #   restart: unless-stopped
 
   # DATABASE
   mongodb:
@@ -30,11 +30,9 @@ services:
     ports:
       - 27017:27017
     container_name: ticketapp_db
-    volumes:
-      - ./data/db:/data/db
+    # volumes:
+    #   - ./data/db:/data/db
     restart: unless-stopped
-
-  # MESSAGE BROKER
   
 networks:
   default:
