--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@faker-js/faker": "^10.0.0",
     "@types/body-parser": "^1.19.6",
     "@types/bun": "latest",
+    "@types/compression": "^1.8.1",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/lodash": "^4.17.20",
@@ -19,7 +20,9 @@
   },
   "dependencies": {
     "body-parser": "^2.2.0",
+    "compression": "^1.8.1",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.18.0",
