--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/lodash": "^4.17.20",
     "@types/multer": "^2.0.0",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "supertest": "^7.1.4"
   },
   "peerDependencies": {
@@ -28,6 +30,8 @@
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
     "pino-http": "^11.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^4.1.5"
   },
   "scripts": {
