--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "better-auth": "^1.3.34",
     "body-parser": "^2.2.0",
     "compression": "^1.8.1",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "mongodb": "^7.0.0",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
     "pino-http": "^11.0.0",
